# mcp-client-a365-mcp-servers

./: .env.template  .gitignore  A365_MCP.md  BOOTSTRAP.md  README.md  ToolingManifest.json  pyproject.toml
docs/: mcp-server-access-issue.md
mcp_bridge/: __main__.py  auth.py  bridge.py  config.py  server.py  tools_cache.py
mcp_client/: __main__.py  app.py  controllers.py  llm.py
mcp_client/core/: models.py
mcp_client/ui/: theme.py  views.py
